Bug 129810 - Fullwidth comma should be compressed in the document
Summary: Fullwidth comma should be compressed in the document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: ⁨خالد حسني⁩
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks: CJK
  Show dependency treegraph
 
Reported: 2020-01-05 14:52 UTC by Volga
Modified: 2023-06-24 05:20 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file opened with MS Word (126.39 KB, image/png)
2020-01-05 14:58 UTC, Volga
Details
See the details (36.50 KB, image/png)
2020-01-18 17:13 UTC, Volga
Details
Test font (6.35 MB, application/x-7z-compressed)
2020-02-04 17:28 UTC, Volga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volga 2020-01-05 14:52:12 UTC
Description:
While you enabled Kerning -> Western text and Asian punctuation and Character Spacing -> Compress punctuation only at Options -> Asian Layout, the fullwidth comma (U+FF0C) should be also compressed. However it works with Microsoft Word, not with LibreOffice Writer.

Steps to Reproduce:
1. Open sample DOC file from attachment 156940 [details]

Actual Results:
See attachment 156942 [details]

Expected Results:
The fullwidth comma should compressed in LibreOffice Writer.


Reproducible: Always


User Profile Reset: No



Additional Info:
版本: 6.4.0.1 (x64)
Build ID: 1b6477b31f0334bd8620a96f0aeeb449b587be9f
CPU 线程: 4; 操作系统: Windows 10.0 Build 18363; UI 渲染: 默认; VCL: win; 
区域语言: zh-CN (zh_CN); UI 语言: zh-CN
Calc: threaded
Comment 1 Volga 2020-01-05 14:58:03 UTC
Created attachment 156945 [details]
Sample file opened with MS Word
Comment 2 Kevin Suo 2020-01-18 02:47:37 UTC
Volga: Cloud you explain the problem in detail? What is going wrong? I don't see the issue here.
Comment 3 Volga 2020-01-18 17:13:30 UTC
Created attachment 157245 [details]
See the details

OK, I send an illustration to explain the problem in detail, you can see the problem right now.
Comment 4 Stanislaus J. Pinasthika 2020-02-02 23:46:20 UTC
Thanks for reporting the problem. Could you explain what font do you use? Seems the problem is MS Word pick the wrong font but have similar shape with Writer font. Change to NEEDINFO
Comment 5 Volga 2020-02-03 07:19:53 UTC
(In reply to Stanislaus J. Pinasthika from comment #4)
> Thanks for reporting the problem. Could you explain what font do you use?
> Seems the problem is MS Word pick the wrong font but have similar shape with
> Writer font. Change to NEEDINFO
OK, I used SimSun (宋体, Songti) in this document, which is the default typeface for the Chinese Simplefied version of Windows.
Comment 6 QA Administrators 2020-02-04 03:31:28 UTC Comment hidden (noise)
Comment 7 Volga 2020-02-04 17:28:26 UTC
Created attachment 157647 [details]
Test font

Stanislaus, you are now able to reproduce with this font, which is available at my attachment.
Comment 8 Buovjaga 2020-05-09 13:18:00 UTC
Repro with Win master. Already seen in 4.4 and 3.3. Don't need SimSun to see it, substitution worked as well.
Comment 9 QA Administrators 2022-05-10 03:28:53 UTC Comment hidden (noise)
Comment 10 Volga 2022-07-27 18:15:22 UTC
This is still reproduced with

Version: 7.3.5.2 (x86) / LibreOffice Community
Build ID: 184fe81b8c8c30d8b5082578aee2fed2ea847c01
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: threaded
Comment 11 Volga 2023-06-22 12:10:26 UTC
This is still happend in

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: threaded

And I found replace fullwidth comma by other fullwidth punctuation could also reproduce, so I believe all punctuations encoded in Halfwidth and Fullwidth Forms block should be treated the same as that of CJK Symbols and Punctuation clock for compress punctuation.
Comment 12 ⁨خالد حسني⁩ 2023-06-23 16:14:09 UTC
https://gerrit.libreoffice.org/c/core/+/153530 

Let me know if I missed any other full width punctuation.
Comment 13 Commit Notification 2023-06-23 23:01:52 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a92323b54e7d63a8bc0b8e62fdc6b31760dcd05

tdf#129810: Compress fullwidth CJK punctuation

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Volga 2023-06-24 04:06:39 UTC
Should this to be backported to 7.6beta?
Comment 15 Commit Notification 2023-06-24 05:20:24 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/3548c92453b9d0d85270bc6309a91c4107e49685

tdf#129810: Compress fullwidth CJK punctuation

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.