tdf#129810: Compress fullwidth CJK punctuation

When compressions CJK punctuation, compress also full width versions to
match Word behaviour.

Change-Id: Ic35cfcbacca1974b7241d657f078148bac06478e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153530
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit 4a92323b54e7d63a8bc0b8e62fdc6b31760dcd05)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153519